--- a/backend/.env.test
+++ b/backend/.env.test
@@ -4,8 +4,8 @@ ETH_RPC_URL = http://localhost:8545
 CACHE_CAP = 3
 PROXY_NFT_ADDRESS = 0xa2133A0F6B8A70D70E75238C7C0d84A0cD3F1Db3
 
-DB_HOST=localhost
+DB_HOST=eth-proxy-pg
 DB_USER=user
 DB_PASSWORD=password
-DB_NAME=dbname
+DB_NAME=PROXY_DB
 DB_PORT=5432
